--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bulma": "^0.9.2",
     "formik": "^2.2.6",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
