--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-tiny-popover": "^6.0.5",
     "reselect": "^4.0.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
