--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bulma": "^0.9.2",
     "formik": "^2.2.6",
+    "json-form-data": "^1.7.2",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.4",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
